configured tinymce and made it work with text areas in content item edit field. Had to modify admin.css because the styles for #main table was too generic and forced tinymce-enabled fields to render with layout issues

--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -107,9 +107,6 @@ a img {
 .nav a {
 	display: block;}
 
-#main table {
-	width: 700px;}
-
 .flash-error, .flash-notice{
 	padding: 0;
 	margin: 0;
@@ -237,3 +234,4 @@ table.conversations td.handle:hover {
 .staff_pick.off:hover {
 	background: transparent url('../images/icons/star_full.png') 0 0 no-repeat;
 }
+textarea.tinymce{width:695px;}
